--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,46 @@ body {
     padding-right: 30px;
     color: #5c5c5c;
 }
+
+.blog-section .container {
+    padding-bottom: 120px;
+}
+
+
+/* footer section start now */
+
+.footer-section {
+    background-color: #1e1e1e;
+}
+
+.footer-section .row-1 h1 {
+    font-size: 60px;
+    font-weight: 600;
+    text-align: center;
+    color: #fff;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #2d2d2d;
+}
+
+.footer-section .container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.footer-section .row-2 ul {
+    list-style: none;
+    display: block;
+}
+
+.footer-section .row-2 ul li {
+    text-align: center;
+    margin-top: 35px;
+}
+
+.footer-section .row-2 ul li a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    padding-right: 50px;
+}
