--- a/css/style.css
+++ b/css/style.css
@@ -286,10 +286,130 @@ body {
 /* responsiv display start now */
 
 @media only screen and (max-width:688px) {
-    .top-banner-section {
+    .container {
+        max-width: 334px;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin: 0 auto;
+    }
+
+    /* top banner section */
+
+    .top-banner-section .container {
+        margin-bottom: -120px;
+    }
+
+    .top-banner-section .main-column {
+        max-width: 258px;
+        margin: 0 auto;
+        flex-direction: column;
+    }
+
+    .top-banner-section .banner-caption {
+        max-width: 228px;
+        margin: 0 auto;
+    }
+
+    .top-banner-section .main-column .left-column {
+        width: 100%;
+    }
+
+    .top-banner-section .left-column h1 {
+        font-size: 22px;
+        text-align: center;
+        padding-top: 35px;
+        padding-bottom: 15px;
+    }
+
+    .top-banner-section .left-column p {
+        font-size: 14px;
+        text-align: center;
+        padding-bottom: 28px;
+    }
+
+    .top-banner-section .left-column p span {
         display: none;
     }
+
+    .top-banner-section .common-button {
+        padding: 8px 12px;
+        margin-left: 38px;
+    }
+
+    .top-banner-section .main-column .right-column {
+        width: 100%;
+    }
+
+    .top-banner-section .right-column img {
+        height: 233px;
+        height: 245px;
+    }
+
+    /* blog sectio */
+
+    .blog-section .main-column {
+        flex-direction: column;
+    }
+
+    .blog-section .left-column {
+        width: 100%;
+    }
+
+    .blog-section .buttons {
+        background-color: #fff;
+    }
+
+    .blog-section .button a {
+        font-size: 20px;
+        box-shadow: 0px 0px 2px 1px;
+        font-weight: 500;
+    }
+
+    .blog-section .button .btn-2 {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .blog-section .right-column {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+    }
+
+    .blog-section .right-column .blogs-item img {
+        width: 100%;
+    }
+
+    .blog-section .container {
+        padding-bottom: 30px;
+    }
+
+    /* footer section responsive style */
+    .footer-section .row-1 h1 {
+        font-size: 22px;
+        font-weight: 600;
+    }
+
+    .footer-section ul li {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer-section .row-2 ul li a {
+        padding-right: 0;
+        padding-bottom: 40px;
+      }
+      .footer-section .row-2 ul li a:last-child{
+        padding-bottom: 0px;
+      }
+      .footer-section .container {
+        padding-top: 35px;
+        padding-bottom: 35px;
+      }
 }
+
+
+
+
 
 @media only screen and (min-width:689px) and (max-width:992px) {
     .container {
@@ -399,21 +519,24 @@ body {
         padding: 8px 25px;
         border-radius: 7px;
     }
-    .view-button a:active{
+
+    .view-button a:active {
         background-color: blue;
     }
+
     .blog-section .container {
         padding-bottom: 85px;
     }
+
+    .blog-section .match-shedeul .blogs-item:last-child {
+        display: block;
+    }
+
     /* .footer-section style */
     .footer-section .row-1 h1 {
         font-size: 40px;
         font-weight: 600;
     }
-    .footer-section .row-2 span{
-        padding-top: 20px;
-    }
-    .blog-section .match-shedeul .blogs-item:last-child{
-        display: block;
-    }
+
+
 }
